Added FindElement for _spartaLogo and _privacyPolicyLink, with helper methods to click both

--- a/TraineeTrackerFramework/TraineeTrackerFramework/TraineeTrackerFramework.csproj
+++ b/TraineeTrackerFramework/TraineeTrackerFramework/TraineeTrackerFramework.csproj
@@ -22,4 +22,10 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestHost.dll.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
