--- a/TraineeTrackerFramework/APITestFramework/APITestFramework.csproj
+++ b/TraineeTrackerFramework/APITestFramework/APITestFramework.csproj
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <None Update="testhost.dll.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
