--- a/TraineeTrackerFramework/APITestFramework/APITestFramework.csproj
+++ b/TraineeTrackerFramework/APITestFramework/APITestFramework.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <None Update="testhost.dll.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
