--- a/TraineeTrackerFramework/APITestFramework/APITestFramework.csproj
+++ b/TraineeTrackerFramework/APITestFramework/APITestFramework.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="RestSharp" Version="108.0.1" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
+    <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
